--- a/index.html
+++ b/index.html
@@ -70,15 +70,13 @@
       <p class="hero-intro">I am <span class="hero-span">Nurafian Zulkifli</span> - An aspiring Web Developer and UX
         Designer. </p>
       <div class="d-flex justify-content-center">
-        <a class="scrollto" href="index.html#about"><img src="assets/img/hero-carousel/chevron-nws.svg"
+        <a class="scrollto" href="index.html#about"><img src="assets/img/chevron-nws.svg"
             class="img-fluid animated"></a>
       </div>
     </div>
   </section>
 
   <main id="main">
-
-
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -202,8 +200,7 @@
     </section><!-- End About Section -->
 
 
-
-    <!-- ======= timelines Section ======= -->
+    <!-- ======= Timelines Section ======= -->
     <section id="timelines" class="timelines">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
@@ -268,12 +265,14 @@
                 <h3>Education</h3>
                 <p class="timeline-year">2019-2022 | Tertiary Education (2)</p>
                 <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> <b>Singapore Polytechnic</b> - Diploma in Information Technology</li>
+                  <li><i class="bi bi-check-circle-fill"></i> <b>Singapore Polytechnic</b> - Diploma in Information
+                    Technology</li>
                 </ul>
 
                 <p class="timeline-year">2017-2018 | Tertiary Education (1)</p>
                 <ul>
-                  <li><i class="bi bi-check-circle-fill"></i><b>Institute of Technical Education (ITE)</b> - NITEC in Information Technlogy</li>
+                  <li><i class="bi bi-check-circle-fill"></i><b>Institute of Technical Education (ITE)</b> - NITEC in
+                    Information Technlogy</li>
                 </ul>
 
                 <p class="timeline-year">2013-2016 | Secondary School</p>
@@ -319,7 +318,8 @@
                   <li><i class="bi bi-check-circle-fill"></i> Service Star Award (Gold)</li>
                   <li><i class="bi bi-check-circle-fill"></i> Director's List (Year 2)</li>
                   <li><i class="bi bi-check-circle-fill"></i> Edusave Character Award</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Appointment (Vice President – Mobile Apps & connect Club)</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Appointment (Vice President – Mobile Apps & connect Club)
+                  </li>
                   <li><i class="bi bi-check-circle-fill"></i> CDC & CCC ITE Scholarship</li>
                 </ul>
 
@@ -347,7 +347,8 @@
 
         <div class="section-header">
           <h2>Portfolio</h2>
-          <p>Works I have done over the years. These are either my work from past school assignments or from my own personal project.</p>
+          <p>Works I have done over the years. These are either my work from past school assignments or from my own
+            personal project.</p>
         </div>
 
       </div>
@@ -359,77 +360,77 @@
 
           <ul class="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Concept Design</li>
-            <li data-filter=".filter-product">Infographics Design</li>
-            <li data-filter=".filter-branding">App Mockups</li>
-            <li data-filter=".filter-books">Logo Design</li>
+            <li data-filter=".filter-cd">Concept Design</li>
+            <li data-filter=".filter-id">Infographics Design</li>
+            <li data-filter=".filter-am">App Mockups</li>
+            <li data-filter=".filter-ld">Logo Design</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cd">
+              <img src="assets/img/portfolio/ezr.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>Ez-Link Card Redesign</h4>
+                <a href="assets/img/portfolio/ezr.png" title="Ez-Link Card Redesign | 2021"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-              <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
+              <img src="assets/img/portfolio/igrD.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>Product 1</h4>
-                <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>COVID-19 Shopping Habits</h4>
+                <a href="assets/img/portfolio/igrD.png" title="COVID-19 Shopping Habits | 2021"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
+              <img src="assets/img/portfolio/igr.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>Infographic Resume</h4>
+                <a href="assets/img/portfolio/igr.png" title="Infographic Resume | 2020"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-              <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
+              <img src="assets/img/portfolio/fls.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>Books 1</h4>
-                <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>Flashify - a Flashcard App</h4>
+                <a href="assets/img/portfolio/fls.png" title="Flashify - a Flashcard App | 2020"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
+              <img src="assets/img/portfolio/frc.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>Food Review Compiler App</h4>
+                <a href="assets/img/portfolio/frc.png" title="Food Review Compiler App | 2020"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-ld">
+              <img src="assets/img/portfolio/ffl.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
-                <h4>Product 2</h4>
-                <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <h4>Friends Forever Logo Design</h4>
+                <a href="assets/img/portfolio/ffl.png" title="Friends Forever Logo Design | 2020"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio-details.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -455,7 +456,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/email.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -472,7 +473,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/social.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -489,7 +490,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/work.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -533,7 +534,6 @@
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-  <!-- <div id="preloader"></div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
