2022-06 Website Redesign Update to Version 3

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <h4>Ez-Link Card Redesign</h4>
                 <a href="assets/img/portfolio/ezr.png" title="Ez-Link Card Redesign | 2021"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/ezlink-redesign.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -385,7 +385,7 @@
                 <h4>COVID-19 Shopping Habits</h4>
                 <a href="assets/img/portfolio/igrD.png" title="COVID-19 Shopping Habits | 2021"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/igra-1.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -396,7 +396,7 @@
                 <h4>Infographic Resume</h4>
                 <a href="assets/img/portfolio/igr.png" title="Infographic Resume | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/igra-2.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -407,7 +407,7 @@
                 <h4>Flashify - a Flashcard App</h4>
                 <a href="assets/img/portfolio/fls.png" title="Flashify - a Flashcard App | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/ffs.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -418,7 +418,7 @@
                 <h4>Food Review Compiler App</h4>
                 <a href="assets/img/portfolio/frc.png" title="Food Review Compiler App | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/frc.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -429,7 +429,7 @@
                 <h4>Friends Forever Logo Design</h4>
                 <a href="assets/img/portfolio/ffl.png" title="Friends Forever Logo Design | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio-details.html" class="details-link"><i
+                <a href="portfolio/ffl.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -479,7 +479,7 @@
                 <div class="icon">
                   <i class="fa-solid fa-circle-user"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="https://linktr.ee/Nrfz" class="stretched-link">
                   <h3>Social Media</h3>
                 </a>
                 <p>via Linktr.ee</p>
@@ -496,7 +496,7 @@
                 <div class="icon">
                   <i class="fa-brands fa-linkedin"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="stretched-link">
                   <h3>LinkedIn</h3>
                 </a>
                 <p>For Work-related purposes
@@ -523,7 +523,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: 02 June 2022</a>
+            Last Updated: 03 June 2022</a>
           </div>
         </div>
       </div>
