--- a/index.html
+++ b/index.html
@@ -159,37 +159,6 @@
                 </div>
 
               </div><!-- End Tab 2 Content -->
-
-              <div class="tab-pane fade show" id="tab3">
-
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
-                </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
-                  eveniet magni quaerat nemo et.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
-                </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
-                  molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et
-                  perferendis.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
-                </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
-                  quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
-
-              </div><!-- End Tab 3 Content -->
-
             </div>
 
           </div>
@@ -318,7 +287,7 @@
                   <li><i class="bi bi-check-circle-fill"></i> Service Star Award (Gold)</li>
                   <li><i class="bi bi-check-circle-fill"></i> Director's List (Year 2)</li>
                   <li><i class="bi bi-check-circle-fill"></i> Edusave Character Award</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Appointment (Vice President – Mobile Apps & connect Club)
+                  <li><i class="bi bi-check-circle-fill"></i> Appointment (Vice President – Mobile Apps & Services Club)
                   </li>
                   <li><i class="bi bi-check-circle-fill"></i> CDC & CCC ITE Scholarship</li>
                 </ul>
