2022-06 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
   </header><!-- End Header -->
 
+  <!-- ======= Hero Section ======= -->
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="overlay-hero"></div>
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative"
@@ -166,7 +167,7 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
 
 
     <!-- ======= Timelines Section ======= -->
@@ -306,7 +307,7 @@
         </div>
 
       </div>
-    </section><!-- End timelines Section -->
+    </section>
 
 
     <!-- ======= Portfolio Section ======= -->
@@ -408,7 +409,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
 
     <!-- ======= Connect Section ======= -->
@@ -475,9 +476,9 @@
           </div><!-- End Service Item -->
         </div>
       </div>
-    </section><!-- End connect Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -492,7 +493,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: 03 June 2022</a>
+            Last Updated: 04 June 2022</a>
           </div>
         </div>
       </div>
@@ -500,6 +501,7 @@
 
   </footer><!-- End Footer -->
 
+  <!-- ======= Back to Top ======= -->
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
