--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <h3>Work Experiences</h3>
                 <p class="timeline-year">Mar 2021 - Aug 2021 | Housing & Development Board</p>
                 <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> <b>Intern,</b> Information connect Group</li>
+                  <li><i class="bi bi-check-circle-fill"></i> <b>Intern,</b> Information Services Group</li>
                 </ul>
               </div>
 
