2022-06 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
 
           <ul class="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-wd">Website Design</li>
             <li data-filter=".filter-cd">Concept Design</li>
             <li data-filter=".filter-id">Infographics Design</li>
             <li data-filter=".filter-am">App Mockups</li>
@@ -337,6 +338,18 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cd">
+              <img src="assets/img/portfolio/pw.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>Personal Website Redesigns</h4>
+                <a href="assets/img/portfolio/pw.png" title="Personal Website Redesigns | 2019 - May 2022"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/pw-redesign.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cd">
               <img src="assets/img/portfolio/ezr.png" class="img-fluid-portfolio" alt="">
