--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
           <div class="row g-0 portfolio-container">
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cd">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
               <img src="assets/img/portfolio/pw.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Personal Website Redesigns</h4>
