2022-06 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -331,13 +331,24 @@
           <ul class="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-wd">Website Design</li>
-            <li data-filter=".filter-cd">Concept Design</li>
+            <li data-filter=".filter-cr">Concepts & Replications</li>
             <li data-filter=".filter-id">Infographics Design</li>
             <li data-filter=".filter-am">App Mockups</li>
             <li data-filter=".filter-ld">Logo Design</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+              <img src="assets/img/portfolio/br.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>Bus Replications</h4>
+                <a href="assets/img/portfolio/br.png" title="Ez-Link Card Redesign | 2021"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/bus-replications.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
               <img src="assets/img/portfolio/pw.png" class="img-fluid-portfolio" alt="">
@@ -350,8 +361,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cd">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="assets/img/portfolio/ezr.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Ez-Link Card Redesign</h4>
@@ -496,7 +506,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
-
     <div class="footer-legal text-center">
       <div
         class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
@@ -506,7 +515,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: 04 June 2022</a>
+            Last Updated: 27 June 2022</a>
           </div>
         </div>
       </div>
