--- a/portfolio/bus-replications.html
+++ b/portfolio/bus-replications.html
@@ -66,10 +66,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Personal Website Redesigns</h2>
+          <h2>Bus Replications</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Personal Website Redesigns</li>
+            <li>Bus Replications</li>
           </ol>
         </div>
 
@@ -87,11 +87,51 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/PWv1.jpeg" alt="">
+                  <img src="../assets/img/portfolio/brdet.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/PWv2.jpeg" alt="">
+                  <img src="../assets/img/portfolio/brdet1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet5.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet6.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet7.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet8.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet9.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet10.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/brdet11.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -102,20 +142,15 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Website Design </li>
-                <li><strong>Project Year</strong>: 2019 - May 2022</li>
+                <li><strong>Category</strong>: Concepts & Replications </li>
+                <li><strong>Project Year</strong>: 2021 - Present</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                My website redesigns made over the last few years. First started as a School Assignment, I decided to
-                work on it and made it look more professional.
-                <br>
-                <br>
-                View the websites here: <br>
-                <a href="https://nurafianzulkifli.github.io/personal-legacy-v1/">Version 1 (Legacy)</a> <br>
-                <a href="https://nurafianzulkifli.github.io/personal-legacy-v2/">Version 2 (Legacy)</a> 
+                These replications all started with me waiting for my bus, and suddenly I decided 
+                "Hey, let's try and replicate a Bus Model."
               </p>
             </div>
           </div>
