--- a/portfolio/bus-replications.html
+++ b/portfolio/bus-replications.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Website Redesigns</title>
+  <title>Bus Replications</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
