2022-06 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       data-aos="zoom-out">
       <h2 class="hero-hello">Hello there.</h2>
       <!-- <h2>Welcome to <span>HeroBiz</span></h2> -->
-      <p class="hero-intro">I am <span class="hero-span">Nurafian Zulkifli</span> - An aspiring Web Developer and UX
-        Designer. </p>
+      <p class="hero-intro">I am <span class="hero-span">Nurafian Zulkifli</span> - An aspiring Web Developer and Designer. </p>
       <div class="d-flex justify-content-center">
         <a class="scrollto" href="index.html#about"><img src="assets/img/chevron-nws.svg"
             class="img-fluid animated"></a>
@@ -220,7 +219,7 @@
                 <p class="summary">
                   My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic.<br>
                   I am an avid Gadget Enthusiast too, where I enjoy looking and tinkering with Mobile Devices and
-                  Computers.
+                  Computers. I enjoy replicating stuffs that interests me, which you can see some of my works below.
                 </p>
               </div>
               <div class="col-lg-4 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
