2022-08 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <img src="assets/img/portfolio/br.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Bus Replications</h4>
-                <a href="assets/img/portfolio/br.png" title="Ez-Link Card Redesign | 2021"
+                <a href="assets/img/portfolio/br.png" title="Bus Replications | 2021 - Present"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/bus-replications.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
