--- a/index.html
+++ b/index.html
@@ -337,6 +337,16 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+              <img src="assets/img/portfolio/mrsign.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>MRT Signages Concept/Replications</h4>
+                <a href="assets/img/portfolio/mrsign.png" title="MRT Signages Concept/Replications | 2020 - Present"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/mrt-nselem.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="assets/img/portfolio/br.png" class="img-fluid-portfolio" alt="">
@@ -514,7 +524,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: 27 June 2022</a>
+            Last Updated: 20 August 2022</a>
           </div>
         </div>
       </div>
