2022-08 Cumulative Update to Personal V3

--- a/portfolio/mrt-nselem.html
+++ b/portfolio/mrt-nselem.html
@@ -93,6 +93,10 @@
                                 </div>
 
                                 <div class="swiper-slide">
+                                    <img src="../assets/img/portfolio/mrsignDet1a.png" alt="">
+                                </div>
+
+                                <div class="swiper-slide">
                                     <img src="../assets/img/portfolio/mrsignDet1.png" alt="">
                                 </div>
 
@@ -158,7 +162,7 @@
                         &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
                     </div>
                     <div class="credits">
-                        Last Updated: 20 August 2022</a>
+                        Last Updated: 28 August 2022</a>
                     </div>
                 </div>
             </div>
