2022-09 Cumulative Update to Personal V3

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="tab-pane active show" id="tab-1">
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-                <h3>Summary</h3>
+                <h3 class="summary-tit">Summary</h3>
                 <p class="summary">
                   My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic.<br>
                   I am an avid Gadget Enthusiast too, where I enjoy looking and tinkering with Mobile Devices and
