--- a/portfolio/ezlink-redesign.html
+++ b/portfolio/ezlink-redesign.html
@@ -157,7 +157,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: 03 September 2022</a>
+            Last Updated: September 2022</a>
           </div>
         </div>
       </div>
