2022-09 Cumulative Update to Personal V3

--- a/portfolio/man-superlion.html
+++ b/portfolio/man-superlion.html
@@ -68,10 +68,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Bus Replications</h2>
+          <h2>MAN A22 Lion Mascot Replication</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Bus Replications</li>
+            <li>MAN A22 Lion Mascot Replication</li>
           </ol>
         </div>
 
@@ -89,51 +89,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet3.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet4.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet5.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet6.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet7.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet8.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet9.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet10.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet11.png" alt="">
+                  <img src="../assets/img/portfolio/liondet.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -145,16 +101,14 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Concepts & Replications </li>
-                <li><strong>Project Year</strong>: 2021 - Present</li>
+                <li><strong>Project Year</strong>: 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                These replications all started with me waiting for my bus, and me getting fascinated with the different
-                looks and colour of the buses. Hence, I decided "Hey, let's try and replicate a Bus Model."
-
-                (The A&S Double Decker Bus is a commisioned work.)
+                This legendary mascot used to be everywhere in the early 2010s. The mascot was used in promoting SMRT's
+                newest bus model, back then, the MAN A22.
               </p>
             </div>
           </div>
