--- a/index.html
+++ b/index.html
@@ -338,10 +338,21 @@
 
           <div class="row g-0 portfolio-container">
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+              <img src="assets/img/portfolio/lion.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>MAN A22 Lion Mascot Replication</h4>
+                <a href="assets/img/portfolio/lion.png" title="MAN A22 Lion Mascot Replication | 2022"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/man-superlion.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="assets/img/portfolio/mrsign.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MRT Signages Concept/Replications</h4>
-                <a href="assets/img/portfolio/mrsign.png" title="MRT Signages Concept/Replications | 2020 - Present"
+                <a href="assets/img/portfolio/mrsign.png" title="MRT Signages Concept/Replications | 2020 - 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/mrt-nselem.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -352,7 +363,7 @@
               <img src="assets/img/portfolio/br.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Bus Replications</h4>
-                <a href="assets/img/portfolio/br.png" title="Bus Replications | 2021 - Present"
+                <a href="assets/img/portfolio/br.png" title="Bus Replications | 2021 - 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/bus-replications.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
