--- a/portfolio/man-superlion.html
+++ b/portfolio/man-superlion.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bus Replications</title>
+  <title>MAN A22 Lion Mascot Replication</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
