2022-09 Cumulative Update to Personal V3

--- a/portfolio/ezlink-redesign.html
+++ b/portfolio/ezlink-redesign.html
@@ -69,7 +69,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>EZ-Link Card Redesign</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html#hero-animated">Home</a></li>
             <li>EZ-Link Card Redesign</li>
           </ol>
         </div>
