--- a/portfolio/man-superlion.html
+++ b/portfolio/man-superlion.html
@@ -70,7 +70,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>MAN A22 Lion Mascot Replication</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html#hero-animated">Home</a></li>
             <li>MAN A22 Lion Mascot Replication</li>
           </ol>
         </div>
