--- a/portfolio/pw-redesign.html
+++ b/portfolio/pw-redesign.html
@@ -70,7 +70,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Personal Website Redesigns</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html#hero-animated">Home</a></li>
             <li>Personal Website Redesigns</li>
           </ol>
         </div>
