--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
 
           <div class="row g-0 portfolio-container">
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="assets/img/portfolio/lion.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/vpGCJNc.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MAN A22 Lion Mascot Replication</h4>
-                <a href="assets/img/portfolio/lion.png" title="MAN A22 Lion Mascot Replication | 2022"
+                <a href="https://i.imgur.com/vpGCJNc.png" title="MAN A22 Lion Mascot Replication | 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/man-superlion.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
